--- a/pages/app.css
+++ b/pages/app.css
@@ -1,2 +1,10 @@
 @import '~antd/dist/antd.css';
 
+:root {
+    --reup-unit: .25rem;
+    --reup-radius: 5px;
+}
+
+* {
+    font-family: 'Cabin', sans-serif;
+}
