--- a/components/Main/index.module.scss
+++ b/components/Main/index.module.scss
@@ -4,5 +4,12 @@
   @include container;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  >h1 {
+    font-family: 'Dela Gothic One', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 110%;
+    letter-spacing: 0.04em;
+  }
 }
