--- a/components/common/ProductCard/index.module.scss
+++ b/components/common/ProductCard/index.module.scss
@@ -7,34 +7,45 @@
   flex-direction: column;
   gap: calc(var(--reup-unit));
   position: relative;
-  border-radius: calc(var(--reup-radius) * 2);
   transition: .3s;
-  padding: calc(var(--reup-unit) * 2);
-  cursor: pointer;
 
-  &:hover{
-    box-shadow: 5px 5px 10px 5px #adadad;
-  }
   .productImg{
     width: 100%;
     height: auto;
+    cursor: pointer;
   }
   .likeIcon{
     position: absolute;
     right: calc(var(--reup-unit)  * 3);
     top: calc(var(--reup-unit)  * 3);
+    transition: .3s;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
+
   .text,
   .actions{
+    font-weight: normal;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: flex-start;
   }
   .text {
     flex-direction: column;
-    align-items: end;
+    align-items: start;
     h2 {
       font-weight: bold;
+      font-family: 'Gilroy' , sans-serif;
+      margin-bottom: 0;
+    }
+  }
+  .actions{
+    border-top: 2px solid black;
+    h2 {
+      font-weight: bold;
+      font-family: 'Gilroy' , sans-serif;
+      margin-bottom: 0;
     }
   }
 }
