--- a/components/Basket/BasketItems/BasketProductCard/index.module.scss
+++ b/components/Basket/BasketItems/BasketProductCard/index.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
 
+  img {
+    object-fit: cover;
+  }
+
   .priceAndAmount {
     display: flex;
     justify-content: space-between;
