--- a/components/common/EmptyBasket/index.module.scss
+++ b/components/common/EmptyBasket/index.module.scss
@@ -1,4 +1,4 @@
-.emptyBasket {
+.wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,19 +13,11 @@
     text-transform: lowercase;
   }
 
-  .goHomeButton {
+  .gotoMainButton {
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
     color: #8a8a8a;
     text-transform: lowercase;
   }
-}
-
-.basketProductList {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  padding-bottom: 4rem;
 }
