--- a/components/Main/Slider/index.module.scss
+++ b/components/Main/Slider/index.module.scss
@@ -17,30 +17,15 @@
     justify-content: center;
     align-self: center;
     opacity: 0.5;
-
     img {
       height: 3.75em;
     }
-  }
-
-  .arrowLeft {
     &:hover {
-      border-top-left-radius: 40%;
-      border-bottom-left-radius: 40%;
-      background-color: #eae7e7;
+      opacity: 1;
       transition: 0.3s;
-
-    }
+  }
   }
 
-  .arrowRight {
-    &:hover {
-      border-top-right-radius: 40%;
-      border-bottom-right-radius: 40%;
-      background-color: #eae7e7;
-      transition: 0.3s;
-    }
-  }
 
   .leftBlock img {
     height: 54.438em;
@@ -108,6 +93,7 @@
 
           button {
             border: 0;
+            outline: none;
             background: none;
             width: 50%;
             align-self: flex-end;
