--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -1,12 +1,38 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Dela+Gothic+One&display=swap');
 .slide {
   position: relative;
   opacity: 0;
   transition: .3s;
+  width: 90%;
+  // height: 210vh;
+  align-items: center;
+  align-self:center;
   display: flex;
   flex-direction: row;
-  margin: 0 auto;
   &.activeSlide {
     opacity: 1 !important;
+  }
+
+  .leftBlock img{
+    height: inherit;
+  }
+
+  .rightBlock {
+    height: inherit;
+    .rightBlockFlex {
+      height: inherit;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .text {
+        display: flex;
+        flex-direction: column;
+        background-color: #FF8742;
+        .borderTop {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
   }
 }
