--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -1,30 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Dela+Gothic+One&display=swap');
 .slide {
-  position: relative;
+  position: absolute;
   opacity: 0;
   transition: .3s;
   width: 90%;
-  // height: 210vh;
-  align-items: center;
-  align-self:center;
+  justify-content: center;
   display: flex;
   flex-direction: row;
   &.activeSlide {
     opacity: 1 !important;
   }
 
-  .leftBlock img{
-    height: inherit;
+  .leftBlock {
+    width: 50%;
+    img {
+      width: 100%;
+    }
   }
 
   .rightBlock {
-    height: inherit;
+    width: 50%;
     .rightBlockFlex {
-      height: inherit;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      img {
+        width: 100%;
+      }
       .text {
+        height: 100%;
         display: flex;
         flex-direction: column;
         background-color: #FF8742;
