--- a/components/Main/Slider/index.module.scss
+++ b/components/Main/Slider/index.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
   position: relative;
   width: 100%;
-  height: 210vh;
+  height: max-content;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 
   .arrowLeft {
     position: absolute;
