--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -3,24 +3,25 @@
   position: absolute;
   opacity: 0;
   transition: .3s;
-  width: 90%;
+  height: calc(120vh + 1px);
+  width: 100%;
   justify-content: center;
   display: flex;
   flex-direction: row;
+
   &.activeSlide {
     opacity: 1 !important;
   }
 
   .leftBlock {
-    width: 50%;
+    width: 50vw;
     img {
       width: 100%;
     }
   }
 
   .rightBlock {
-    width: 50%;
-    .rightBlockFlex {
+      width: 50%;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -39,5 +40,4 @@
         }
       }
     }
-  }
 }
