--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -1,25 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Dela+Gothic+One&display=swap');
-$ff: 576px;
-$fw: 768px;
-$fs: 992px;
-$fsz: 1200px;
-$lh: 1600px;
-
-@mixin minMaxScreen($ff, $fw, $fs, $fsz, $lh) {
-  min-width: $min;
-  font-family: 'Dela Gothic One';
-  font-style: normal;
-  font-weight: bolder;
-  font-size: 64px;
-  line-height: 110%;
-}
 
 .slide {
   position: absolute;
   opacity: 0;
   transition: .3s;
   width: 100%;
-  height: calc(116vh + 2px);
   justify-content: center;
   display: flex;
   flex-direction: row;
@@ -37,10 +22,9 @@ $lh: 1600px;
 
   .rightBlock {
       width: 50%;
-      height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: flex-start;
       img {
         width: 100%;
       }
@@ -64,7 +48,6 @@ $lh: 1600px;
           display: flex;
           flex-direction: column;
           width: 100%;
-          height: 100%;
           border-top: 4px solid #000;
           
           h2 {
