--- a/pages/app.css
+++ b/pages/app.css
@@ -1,8 +1,10 @@
-@import '~antd/dist/antd.css';
-
 :root {
     --reup-unit: .25rem;
     --reup-radius: 5px;
+}
+
+body {
+    margin: 0;
 }
 
 * {
