--- a/components/Main/Category/index.module.scss
+++ b/components/Main/Category/index.module.scss
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 2px;
+  margin-top: 2px;
   > button{
     text-align: right;
   }
