--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -1,104 +1,58 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Dela+Gothic+One&display=swap');
-
-.slide {
-  position: absolute;
-  opacity: 0;
-  transition: .3s;
-  width: 100%;
-  justify-content: center;
+.slide{
   display: flex;
-  flex-direction: row;
+  opacity: 1;
 
-  &.activeSlide {
-    opacity: 1 !important;
-  }
-
-  .leftBlock {
-    width: 50vw;
-    img {
-      width: 100%;
+  .side {
+    width: 50%;
+    display: flex;
+    &:last-child {
+      display: flex;
+      flex-direction: column;
+      .text {
+        background: #FF8742;
+        height: 100%;
+        > div {
+          border-top: 3px solid black;
+          padding: 2rem;
+          display: flex;
+          flex-direction: column;
+          button{
+            align-self: flex-end;
+          }
+        }
+        h1 {
+          font-family: 'Dela Gothic One', sans-serif;
+          font-size: 64px;
+          font-weight: 400;
+          line-height: 70px;
+          letter-spacing: 0.04em;
+          text-align: left;
+          padding: 1rem 2rem;
+          margin: 0;
+        }
+      }
     }
   }
 
-  .rightBlock {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      img {
-        width: 100%;
-      }
-      .text {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        background-color: #FF8742;
-        h1 {
-          font-family: 'Dela Gothic One';
-          font-style: normal;
-          font-weight: bolder;
-          font-size: 64px;
-          line-height: 110%;
-          text-transform: lowercase;
-          padding: 40px;
-          padding-top: 20px;
-          padding-bottom: 0;
-        }
-        .borderTop {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          border-top: 4px solid #000;
-          
-          h2 {
-            font-family: 'Dela Gothic One';
-            font-style: normal;
-            font-weight: bolder;
-            font-size: 32px;
-            line-height: 110%;
-            text-transform: lowercase;
-            padding: 40px;
-            padding-bottom: 0;
-          }
-          p {
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 110%;
-            margin-left: 1.5em;
-          }    
-        }
-        a {
-          border: 0;
-          background: none;
-          align-self: flex-end;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
 
-          button {
-            border: 0;
-            background: none;
-            outline: none;
-            align-self: flex-end;
-            user-select: none;
-            color: #000;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 32px;
-            line-height: 84.8%;
-            letter-spacing: 0.07em;
-            display: flex;
-            flex-direction: column;
-            span {
-              align-self: flex-end;
-              padding: 5px;
-            }
-            img {
-              &:hover {
-                cursor: pointer;
-                user-select: none;
-              }
-            }
-          }
-        }
-      }
+.fade {
+  animation-name: fade;
+  animation-duration: 5s;
+}
+
+@keyframes fade {
+    0% {
+      opacity: .4;
+    }
+    25% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
     }
 }
