--- a/components/Main/Header/Search/index.module.scss
+++ b/components/Main/Header/Search/index.module.scss
@@ -1,4 +1,12 @@
+.search__panel{
+    width: 100%;
+}
+
 .search__panel__input{
+    width: 30%;
+    text-align: end;
+    border: none;
+    border-bottom: solid;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
