--- a/components/ProductDetail/Content/index.module.scss
+++ b/components/ProductDetail/Content/index.module.scss
@@ -1,7 +1,18 @@
-.wrapper {
+@mixin h1 {
+  font-family: 'Dela Gothic One', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 110%;
+  letter-spacing: 0.04em;
+  color: #000000;
+}
+
+.content {
   display: flex;
   gap: 2rem;
-  justify-content: center;
+  padding: 0 2rem;
+  padding-bottom: 2rem;
   > div {
     width: 50%;
   }
