--- a/components/common/ProductCard/Modal/index.module.scss
+++ b/components/common/ProductCard/Modal/index.module.scss
@@ -47,7 +47,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            height: 40vh;
+            height: 45vh;
 
             .leftUpBlock {
                 position: relative;
@@ -55,8 +55,10 @@
                 flex-direction: row;
                 justify-content: flex-start;
                 padding-right: 20px;
+                width: 50%;
                 .modelLeft, .modelRight {
                     height: 100%;
+                    width: 65%;
                 }
                 .like {
                     position: absolute;
@@ -76,15 +78,105 @@
                 justify-content: space-between;
                 padding-left: 20px;
                 height: 100%;
+                width: 50%;
+                h2 {
+                    font-size: 32px;
+                    font-weight: 700;
+                    line-height: 35.2px;
+                    letter-spacing: 0.1em;
+                    margin-top: 0;
+                    margin-bottom: 10px;
+                    padding-top: 0;
+                }
+                h4 {
+                    font-size: 24px;
+                    font-weight: 600;
+                    line-height: 26.4px;
+                    letter-spacing: 0.1em;
+                    margin-top: 0;
+                    margin-bottom: 10px;
+                    padding-top: 0;
+                }
+                .article {
+                    font-size: 20px;
+                    font-weight: 300;
+                    line-height: 22px;
+                    letter-spacing: 0.08em;
+                }
+                p {
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 26.4px;
+                    letter-spacing: 0.1em;
+                    margin-bottom: 5px;
+                }
                 .descriptionOverflow {
                     overflow-y: scroll;
+                    margin-top: 0;
+                    padding-top: 0;
+                    p {
+                        font-size: 20px;
+                        font-weight: 400;
+                        line-height: 26.4px;
+                        letter-spacing: 7%;
+                    }
                 }
+                .btnPrice {
+                    // margin-top: 50px;
+                    align-self: flex-start;
+                    display: flex;
+                    flex-direction: column;
+                    .price {
+                        align-self: flex-end;
+                        .throughPrice {
+                            text-decoration: line-through;
+                            font-size: 24px;
+                            font-weight: 400;
+                            line-height: 26.4px;
+                            letter-spacing: 0.1em;
+                        }
+                        .activePrice {
+                            font-size: 32px;
+                            font-weight: 700;
+                            line-height: 35.2px;
+                            letter-spacing: 0.1em;
+                        }
+                    }
+                    button {
+                        font-size: 24px;
+                        font-weight: 700;
+                        line-height: 26.4px;
+                        letter-spacing: 0.1em;
+                    }
+                    .chooseSize {
+                        margin-top: 10px; 
+                        div {
+                            box-sizing: border-box;
+                            width: 100%;
+                            text-align: center;
+                            font-size: 24px;
+                            font-weight: 700;
+                            line-height: 26.4px;
+                            letter-spacing: 0.1em;
+                        }
+                    }
+                    .appCart {
+                        margin-top: 15px;
+                        width: 100%;
+                        
+                        button {
+                            width: 100%;
+                        }
+                    }
+                }   
             }
         }
 
         h2 {
-            padding-top: 45px;
-            padding-bottom: 20px;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 110%;
         }
 
         .slideBlock {
