--- a/components/Main/Slider/Slide/index.module.scss
+++ b/components/Main/Slider/Slide/index.module.scss
@@ -11,6 +11,9 @@
       .text {
         background: #FF8742;
         height: 100%;
+        :global( >h1){
+          padding-left: 2rem;
+        }
         > div {
           border-top: 3px solid black;
           padding: 2rem;
@@ -19,16 +22,6 @@
           button{
             align-self: flex-end;
           }
-        }
-        h1 {
-          font-family: 'Dela Gothic One', sans-serif;
-          font-size: 64px;
-          font-weight: 400;
-          line-height: 70px;
-          letter-spacing: 0.04em;
-          text-align: left;
-          padding: 1rem 2rem;
-          margin: 0;
         }
       }
     }
