--- a/components/common/ProductCard/index.module.scss
+++ b/components/common/ProductCard/index.module.scss
@@ -23,7 +23,9 @@
   .modalBtn {
     opacity: 0;
     position: absolute;
-    width: 100%;
+    height: 2.5em;
+    left: 17px;
+    right: 17px;
   }
 
   .productImg{
