--- a/components/common/ProductCard/Modal/index.module.scss
+++ b/components/common/ProductCard/Modal/index.module.scss
@@ -58,7 +58,7 @@
                 width: 50%;
                 .modelLeft, .modelRight {
                     height: 100%;
-                    width: 50%;
+                    // width: 100%;
                 }
                 .like {
                     position: absolute;
@@ -126,7 +126,8 @@
                     display: flex;
                     flex-direction: column;
                     .price {
-                        align-self: flex-end;
+                        align-self: flex-start;
+                        margin-top: 1.5em;
                         .throughPrice {
                             text-decoration: line-through;
                             font-size: 24px;
@@ -188,6 +189,7 @@
 
         .slideBlock {
             display: flex;
+            height: 30vh;
             flex-direction: row;
             justify-content: center;
             align-items: center;
