--- a/components/common/ProductCard/Modal/index.module.scss
+++ b/components/common/ProductCard/Modal/index.module.scss
@@ -11,38 +11,32 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    // margin: 0 auto;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: 1050;
-    width: 100vw;
-    height: 100vh;
-    // background-color: rgba(255, 255, 255, 0.5);
-    background-color: rgba(71, 71, 71, 0.5);
+    max-width: 100vw;
+    max-height: 100vh;
+    background-color: rgba(255, 255, 255, 0.5);
     animation: show 0.5s ease-in-out;
     overflow-y: scroll;
 
     .popup {
         position: absolute;
 		z-index: 4;
-		// left: 25%;
 		top: 50px;
 		width: 1180px;
         height: 1180px;
-		// transform: translateX(-50%);
         background: #fff;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         padding: 22px;
         box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.5);
-        // height: 80%;
         padding: 40px;
 
         .scroll {
-            // overflow-y: scroll;
             .popupClose {
                 position: absolute;
                 right: 22px;
@@ -82,8 +76,7 @@
                                 transition: 0.3s;
                             }
                         }
-                    }
-                    
+                    }                
                 }
     
                 .descriptionBlock {
@@ -209,7 +202,6 @@
                 height: 40%;
                 img {
                     cursor: pointer;
-                    // height: 10em;
                 }
             }
         }
