--- a/components/common/ProductCard/Modal/index.module.scss
+++ b/components/common/ProductCard/Modal/index.module.scss
@@ -26,17 +26,20 @@
         position: absolute;
 		z-index: 4;
 		top: 50px;
-		width: 1180px;
-        height: 1180px;
+		width: 75.625em;
+        height: 61.375em;
         background: #fff;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        padding: 22px;
         box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.5);
-        padding: 40px;
+        padding: 2.5em;
 
         .scroll {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
             .popupClose {
                 position: absolute;
                 right: 22px;
@@ -51,7 +54,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                height: 60%;
+                height: 50%;
     
                 .leftUpBlock {
                     position: relative;
@@ -187,19 +190,24 @@
                 }
             }
     
-            h2 {
-                font-style: normal;
-                font-weight: 700;
-                font-size: 32px;
-                line-height: 110%;
+            .maybeLike {
+                // height: 20%;
+                h2 {
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 32px;
+                    line-height: 110%;
+                }
             }
+            
     
             .slideBlock {
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                height: 40%;
+                // height: 50%;
+                padding: 0;
                 img {
                     cursor: pointer;
                 }
