--- a/components/common/ProductCard/Modal/Slider/index.module.scss
+++ b/components/common/ProductCard/Modal/Slider/index.module.scss
@@ -1,6 +1,8 @@
 .slider{
     display: flex;
     box-sizing: border-box;
+    height: 100%;
+    width: 100%;
     .slide{
       overflow: hidden;
       flex: 1;
