--- a/components/common/Heading/index.module.scss
+++ b/components/common/Heading/index.module.scss
@@ -12,7 +12,7 @@
   &.small {
     font-size: 16px;
   }
-
+  display: inline-block;
   font-style: normal;
   font-weight: bold;
   line-height: 110%;
