--- a/components/Main/Collections/index.module.scss
+++ b/components/Main/Collections/index.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(3, 400px);
   gap: 0px;
   justify-content: center;
+  flex-wrap: wrap;
 }
