--- a/components/Main/ReupChoosen/index.module.scss
+++ b/components/Main/ReupChoosen/index.module.scss
@@ -1,8 +1,10 @@
+@import 'styles/mixins.scss';
+
 .wrapper {
   display: flex;
-  justify-content: center;
-  gap: 2rem;
-  border-bottom: 2px solid black;
+  justify-content: space-evenly;
+  gap: 4rem;
+  @include contentWidth();
   .info {
     width: 40%;
     margin-top: 4rem;
@@ -27,5 +29,10 @@
   }
   .imgWrapper {
     margin-top: -100px;
+    width: 40%;
+    > img {
+      width: 100%;
+      height: auto;
+    }
   }
 }
