--- a/components/common/CollectionCard/index.module.scss
+++ b/components/common/CollectionCard/index.module.scss
@@ -16,6 +16,7 @@
       letter-spacing: 0.07em;
       text-align: left;
       margin: 0;
+      color: black !important;
     }
     span {
       left: 16px;
