--- a/components/common/ProductCard/index.module.scss
+++ b/components/common/ProductCard/index.module.scss
@@ -7,6 +7,10 @@
   position: relative;
   transition:.3s;
 
+  :global(p){
+    margin: 1rem 0 ;
+  }
+
   .productImg{
     width: 100%;
     height: auto;
@@ -27,23 +31,24 @@
     font-weight: normal;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: baseline;
   }
   .text {
     flex-direction: column;
     align-items: start;
-    h2 {
-      font-weight: bold;
-      font-family: 'Gilroy' , sans-serif;
+
+    :global(h1) {
       margin-bottom: 0;
+      margin-top: 0;
+      color: black !important;
     }
   }
   .actions{
     border-top: 2px solid black;
-    h2 {
-      font-weight: bold;
-      font-family: 'Gilroy' , sans-serif;
+    :global(h1){
       margin-bottom: 0;
+      margin-top: 0;
+      color: black !important;
     }
   }
 }
