--- a/components/common/Select/index.module.scss
+++ b/components/common/Select/index.module.scss
@@ -3,6 +3,8 @@
   border: 2px solid black;
   display: inline-block;
   position: relative;
+  width: 200px;
+  text-align: center;
   .title {
     font-family: 'Gilroy', sans-serif;
     font-size: 18px;
