--- a/components/ProductDetail/Content/Slider/index.module.scss
+++ b/components/ProductDetail/Content/Slider/index.module.scss
@@ -1,24 +1,34 @@
 .slider{
   display: flex;
-  box-sizing: border-box;
-  .slide{
-    overflow: hidden;
-    flex: 1;
-    transition: .3s;
-    text-align: center;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  .previewSlides {
+    width: 15%;
     display: flex;
-    justify-content: center;
-    background: black;
-    img {
-      width: auto;
-      text-align: center;
-      opacity: .5;
+    flex-direction: column;
+    gap: 1rem;
+    max-height: 584px;
+    overflow-y: scroll;
+    .prev {
       transition: .3s;
-    }
-    &.active{
-      img {
-        opacity: 1;
+      outline: 2px solid transparent;
+      display: flex;
+      background: black;
+      &.active{
+        opacity: .8;
       }
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+  .activeSlide{
+    width: 75%;
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
