--- a/components/common/ProductCard/Modal/index.module.scss
+++ b/components/common/ProductCard/Modal/index.module.scss
@@ -27,7 +27,7 @@
 		z-index: 4;
 		top: 50px;
 		width: 75.625em;
-        height: 61.375em;
+        height: 58.375em;
         background: #fff;
         display: flex;
         flex-direction: column;
@@ -40,15 +40,6 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            .popupClose {
-                position: absolute;
-                right: 22px;
-                top: 22px;
-                cursor: pointer;
-                font-size: 35px;
-                color: #fff;
-                font-weight: 300;
-            }
     
             .upBlock {
                 display: flex;
@@ -62,63 +53,8 @@
                     flex-direction: row;
                     justify-content: center;
                     padding-right: 20px;
-                    width: 60%;
-                    .leftUpBlockLike {
-                        position: relative;
-                        width: 100%;
-                        height: 100%;
-                        .like {
-                            position: absolute;
-                            right: 20px;
-                            top: 20px;
-                            z-index: 999;
-                            &:hover {
-                                cursor: pointer;
-                                transform: scale(1.2);
-                                transition: 0.3s;
-                            }
-                        }
-                    }                
+                    width: 60%;             
                 }
-    
-                .descriptionBlock {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    padding-left: 20px;
-                    height: 100%;
-                    width: 40%;
-                    h2 {
-                        font-size: 32px;
-                        font-weight: 700;
-                        line-height: 35.2px;
-                        letter-spacing: 0.1em;
-                        margin-top: 0;
-                        margin-bottom: 10px;
-                        padding-top: 0;
-                    }
-                    h4 {
-                        font-size: 24px;
-                        font-weight: 600;
-                        line-height: 26.4px;
-                        letter-spacing: 0.1em;
-                        margin-top: 0;
-                        margin-bottom: 10px;
-                        padding-top: 0;
-                    }
-                    .article {
-                        font-size: 20px;
-                        font-weight: 300;
-                        line-height: 22px;
-                        letter-spacing: 0.08em;
-                    }
-                    p {
-                        font-size: 24px;
-                        font-weight: 700;
-                        line-height: 26.4px;
-                        letter-spacing: 0.1em;
-                        margin-bottom: 5px;
-                    }
                     .descriptionOverflow {
                         overflow-y: scroll;
                         margin-top: 0;
@@ -130,71 +66,15 @@
                             letter-spacing: 7%;
                         }
                     }
-                    .btnPrice {
-                        align-self: flex-start;
-                        display: flex;
-                        flex-direction: column;
-                        .price {
-                            align-self: flex-start;
-                            margin-top: 1.5em;
-                            .throughPrice {
-                                text-decoration: line-through;
-                                font-size: 24px;
-                                font-weight: 400;
-                                line-height: 26.4px;
-                                letter-spacing: 0.1em;
-                            }
-                            .activePrice {
-                                font-size: 32px;
-                                font-weight: 700;
-                                line-height: 35.2px;
-                                letter-spacing: 0.1em;
-                            }
-                        }
-                        button {
-                            font-size: 24px;
-                            font-weight: 700;
-                            line-height: 26.4px;
-                            letter-spacing: 0.1em;
-                        }
-                        .chooseSize {
-                            margin-top: 10px;
-                            position: relative; 
-                            div {
-                                box-sizing: border-box;
-                                width: 100%;
-                                text-align: center;
-                                font-size: 24px;
-                                font-weight: 700;
-                                line-height: 26.4px;
-                                letter-spacing: 0.1em;
-                            }
-                            .arrowDown {
-                                position: absolute;
-                                width: 16px;
-                                height: 8px;
-                                right: 15px;
-                                top: 20px;
-                            }
-                        }
-                        .appCart {
-                            margin-top: 15px;
-                            width: 100%;
-                            
-                            button {
-                                width: 100%;
-                            }
-                        }
-                    }   
-                }
             }
     
             .maybeLike {
-                // height: 20%;
                 h2 {
                     font-style: normal;
                     font-weight: 700;
                     font-size: 32px;
+                    margin-top: 0;
+                    margin-bottom: 0;
                     line-height: 110%;
                 }
             }
@@ -205,7 +85,6 @@
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                // height: 50%;
                 padding: 0;
                 img {
                     cursor: pointer;
