--- a/components/Main/Category/index.module.scss
+++ b/components/Main/Category/index.module.scss
@@ -8,15 +8,15 @@
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 2px;
   margin-top: 2px;
-  > button{
+  > button {
     text-align: right;
   }
 
-  > button:nth-child(4n){
+  > button:nth-child(4n) {
     text-align: center;
   }
 
-  > button:nth-child(2n){
-    text-align: left
+  > button:nth-child(2n) {
+    text-align: left;
   }
 }
