--- a/components/ProductDetail/Content/Reviews/ReviewCard/index.module.scss
+++ b/components/ProductDetail/Content/Reviews/ReviewCard/index.module.scss
@@ -1,4 +1,4 @@
-.wrapperWithImages{
+.wrapperWithImages {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -7,7 +7,7 @@
     gap: 2rem;
     .imgWrapper {
       width: 250px;
-      img{
+      img {
         width: 100%;
         height: auto;
       }
@@ -28,24 +28,24 @@
     gap: 1rem;
     align-items: baseline;
     :global(h1),
-    :global(p){
-      margin-top: .5rem;
-      margin-bottom: .5rem;
+    :global(p) {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
-    :global(h1):first-child{
+    :global(h1):first-child {
       margin-top: 0;
       margin-bottom: 0;
     }
   }
-  .footer{
-    display:flex;
+  .footer {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    .likes{
+    .likes {
       display: flex;
       gap: 2rem;
     }
-    :global(p){
+    :global(p) {
       color: #979797;
     }
   }
@@ -77,7 +77,7 @@
   .content {
     display: flex;
     flex-direction: column;
-    gap: .3rem;
+    gap: 0.3rem;
     width: 85%;
     > {
       display: flex;
