--- a/components/common/ProductCard/Modal/DescriptionBlock/Price/index.module.scss
+++ b/components/common/ProductCard/Modal/DescriptionBlock/Price/index.module.scss
@@ -7,10 +7,10 @@
         margin-top: 1.5em;
         .throughPrice {
             text-decoration: line-through;
-            font-size: 24px;
-            font-weight: 700;
-            line-height: 26.4px;
-            letter-spacing: 0.1em;
+            // font-size: 24px;
+            // font-weight: 700;
+            // line-height: 26.4px;
+            // letter-spacing: 0.1em;
             opacity: 0.5;
         }
         .activePrice {
