--- a/components/common/ProductCard/Modal/Slider/index.module.scss
+++ b/components/common/ProductCard/Modal/Slider/index.module.scss
@@ -1,27 +1,26 @@
-.slider{
+.slider {
+  display: flex;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  .slide {
+    overflow: hidden;
+    flex: 1;
+    transition: 0.3s;
+    text-align: center;
     display: flex;
-    box-sizing: border-box;
-    height: 100%;
-    width: 100%;
-    .slide{
-      overflow: hidden;
-      flex: 1;
-      transition: .3s;
+    justify-content: center;
+    background: black;
+    img {
+      width: auto;
       text-align: center;
-      display: flex;
-      justify-content: center;
-      background: black;
+      opacity: 0.5;
+      transition: 0.3s;
+    }
+    &.active {
       img {
-        width: auto;
-        text-align: center;
-        opacity: .5;
-        transition: .3s;
-      }
-      &.active{
-        img {
-          opacity: 1;
-        }
+        opacity: 1;
       }
     }
   }
-  
+}
