--- a/components/common/ProductCard/index.module.scss
+++ b/components/common/ProductCard/index.module.scss
@@ -5,30 +5,51 @@
   flex-direction: column;
   gap: calc(var(--reup-unit));
   position: relative;
-  transition: 0.3s;
-
-  
-  :global(p) {
-    margin: 1rem 0;
+  transition:.3s;
+  margin-top: 30px;
+  &:hover {
+    .productImg {
+      opacity: 0.5;
+      z-index: 2;
+    }
+    .modalBtn {
+      opacity: 1;
+      transform: translateY(8em);
+      transition: transform 0.3s;
+      z-index: 3;
+    }   
   }
 
-  .productImg {
+  .modalBtn {
+    opacity: 0;
+    position: absolute;
+    height: 2.5em;
+    left: 17px;
+    right: 17px;
+  }
+
+  :global(p){
+    margin: 1rem 0 ;
+  }
+
+  .productImg{
     width: 100%;
     height: auto;
     cursor: pointer;
   }
-  .likeIcon {
+  .likeIcon{
     position: absolute;
-    right: calc(var(--reup-unit) * 3);
-    top: calc(var(--reup-unit) * 3);
-    transition: 0.3s;
+    right: calc(var(--reup-unit)  * 3);
+    top: calc(var(--reup-unit)  * 3);
+    transition:.3s;
+    z-index: 5;
     &:hover {
       transform: scale(1.2);
     }
   }
 
   .text,
-  .actions {
+  .actions{
     font-weight: normal;
     display: flex;
     justify-content: space-between;
@@ -44,9 +65,9 @@
       color: black !important;
     }
   }
-  .actions {
+  .actions{
     border-top: 2px solid black;
-    :global(h1) {
+    :global(h1){
       margin-bottom: 0;
       margin-top: 0;
       color: black !important;
