add space component

--- a/components/Liked/LikedList/index.module.scss
+++ b/components/Liked/LikedList/index.module.scss
@@ -4,4 +4,11 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 0 auto;
+  margin-top: 32px;
+  margin-left: 30px;
+}
+
+.space {
+  margin-top: 32px;
+  margin-left: 30px;
 }
